# poly-autobet

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  err.txt  fixed.md  implementation_plan.md  main.py  manual.md  project.md  pyproject.toml  stress_out.txt  temp_err.txt  test_log.txt  test_log_final.txt  test_log_hotspot.txt  tg_fixed.md
.claude/: gsd-file-manifest.json  settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
alembic/: env.py
analysis/: __init__.py
api/: main.py  webhook_router.py
config/: __init__.py  cities.py  settings.py
core/: __init__.py  ai_analyzer.py  city_resolver.py  polymarket_sync.py  position_manager.py  risk_manager.py  scanner.py  stats_manager.py  strategy_engine.py  trade_executor.py  weather_collector.py
dashboard/: streamlit_app.py
data/: __init__.py  database.py  models.py
infra/: __init__.py  event_loop.py  json_utils.py  redis_client.py
notifications/: __init__.py  telegram_bot.py
scripts/: audit_db.py  cleanup_db.py  debug_city_res.py  debug_env.py  debug_telegram_host.py  derive_creds.py  diagnostic_401.py  import_cities.py  minimax_proxy_host.py  mobile_node.py  probe_account_details.py  probe_balance_deep.py  probe_balance_deep_v2.py  probe_clob.py  probe_polymarket_data.py  probe_polymarket_data_final.py  probe_polymarket_data_final_v2.py  probe_polymarket_data_fixed.py  probe_signatures.py  probe_signatures_full.py  register_webhook.ps1  register_webhook.py  send_test_push.py  stress_test_ws.py  test_ai_city.py  test_ai_full.py  test_keys.py  test_manual_confirm.py  test_market_fetch.py  test_minimax_anthropic.py  test_openai_cp.py  test_opencode_auth.py  test_telegram.py  test_telegram_chat.py  verify_history.py  (+3 more)
(+16 files in other folders)
